--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,4 +12,4 @@ jobs:
     - uses: actions/checkout@v4
     - run: docker build -t manish13ksangwan/automatedeploy-nextjs .
     - run: echo "${{secrets.DOCKERHUB_PASSWORD}}" | docker login -u ${{secrets.DOCKERHUB_USERNAME}} --password-stdin
-    - run: docker push manish13ksangwan/automatedeploy-nextjs:latest
+    - run: docker push manish13ksangwan/automatedeploy-nextjs
